2006-08-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (draw_slider),
	(draw_check):
	- added shadow to checkbutton

	* themes/Industrial/gtk-2.0/gtkrc:
	- enable trough-side-details
	- activate sliders
	- set x/ythickness of GtkProgress to 0px
	- some cleanups

2006-08-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (draw_focus):
	- remove some debugging cruft

2006-08-16  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (real_draw_box),
	(draw_focus), (draw_shadow):
	* engines/industrial/src/industrial_style_versioned_code.h:
	- Implement a focus for GtkEntry
	- Some cleanups.

	* themes/Industrial/gtk-2.0/gtkrc:
	- Use the focus for GtkEntry
	- Some other small changes

2006-08-15  Andrew Johnson  <acjgenius@earthlink.net>

	* engines/glide/src/glide_gtk2_support.c:
	(glide_draw_pattern_fill):
	- Fix Pattern Translate offset

2006-08-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/animation.c:
	* engines/clearlooks/src/animation.h:

	- include ge-support.h in animation.h instead of animation.c. This
	is needed for GE_INTERNAL.

2006-08-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (draw_rounded_rect),
	(real_draw_box), (real_draw_box_gap), (draw_extension),
	(draw_check):
	- small improvements all over the place. ComboBoxes and Spinbuttons
	don't have a two pixel distance between buttons and entry anymore.

	* engines/support/cairo-support.c: (ge_cairo_rounded_rectangle):
	- Handle a small radius by using cairo_rectangle.

	* engines/support/widget-information.c:
	(ge_button_get_default_border):
	* engines/support/widget-information.h:
	- added ge_button_get_default_border which I need for industrial

2006-08-13  Andrew Johnson <acjgenius@earthlink.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_arrow):
