@@ -1,3 +1,9 @@
+2006-08-18  Andrew Johnson  <acjgenius@earthlink.net>
+
+	* engines/hc/src/hc-style.c: (hc_draw_check):
+
+	- Improve Visibility/Contrast of Checks, Still not right, but better
+
 2006-08-17  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/industrial/src/industrial_style.c: (draw_slider),
